// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`protocols reducer deleteProtocol() Has existing sessions warns user about existing sessions 1`] = `
Array [
  Array [
    Object {
      "confirmLabel": "Delete protocol and sessions",
      "message": <React.Fragment>
        <p>
          There are interview sessions on this device that use this protocol.
        </p>
        <p>
          <strong>
            Deleting this protocol will also delete these sessions.
          </strong>
        </p>
      </React.Fragment>,
      "title": "Interviews using this protocol",
      "type": "Confirm",
    },
  ],
]
`;

exports[`protocols reducer deleteProtocol() Has non-exported existing sessions warns user about existing sessions 1`] = `
Array [
  Array [
    Object {
      "confirmLabel": "Delete protocol and sessions",
      "message": <React.Fragment>
        <p>
          There are interview sessions on this device using this protocol that have not yet been exported.
        </p>
        <p>
          <strong>
            Deleting this protocol will also delete these sessions.
          </strong>
        </p>
      </React.Fragment>,
      "title": "Interviews using protocol have not been exported",
      "type": "Warning",
    },
  ],
]
`;

exports[`protocols reducer deleteProtocol() confirms and then deletes protocol 1`] = `
Array [
  Array [
    Object {
      "protocolUID": "1234",
      "type": "INSTALLED_PROTOCOLS/DELETE_PROTOCOL",
    },
  ],
]
`;

exports[`protocols reducer deleteProtocol() does not confirm and does not delete protocol 1`] = `Array []`;
